--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <div class="container col-xxl-8 px-4 py-5">
                 <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                     <div class="col-10 col-sm-8 col-lg-6">
-                        <img src="img/sandika ghalih.png" class="d-block mx-lg-auto img-fluid" width="350"
+                        <img src="img/me-removebg-preview.png" class="d-block mx-lg-auto img-fluid" width="350"
                             loading="lazy">
                     </div>
                     <div class="col-lg-6">
